--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>Welcome to the html page</h1>
+        <h1>Hello!</h1>
         Hello, world!
     </body>
 </html>
